Update consent and instruction templates for clarity and consistency; revise study duration, compensation details, and task instructions to enhance participant understanding.

--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Consent</title>
+  <title>Online Consent Form</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
@@ -10,7 +10,7 @@
   <div class="cl0">
 		<h2><b>Learning From Multiple Texts</b></h2>
     <p>
-      You are being asked to participate in a voluntary research study. The purpose of this study is to understand how people learn information through reading and searching from multiple texts. Participating in this study will involve filling out surveys, learning health topics, answering what you have learned, and completing cognitive ability measures. During the study, you will need to learn several health topics under a limit of time. Some health topics are more difficult than others. You can decide how you want to allocate your time. The goal is to learn as much as you can. After learning, you will need to report what you have learned and answer comprehension questions. You will receive additional bonus money if the accuracy of your comprehension questions is higher than 90%. Your participation will last about 45 minutes.
+      You are being asked to participate in a voluntary research study. The purpose of this study is to understand how people learn information through reading and searching from multiple texts. In this study, you will fill out surveys, learn different topics, answer what you have learned, and complete cognitive ability measures. During the study, you will need to learn several topics under a limit of time. Some topics are more difficult than others. You can decide how you want to allocate your time. The goal is to learn as much as you can. After learning, you will need to report what you have learned and answer comprehension questions. You will receive additional bonus money if the accuracy of your comprehension questions is higher than 90%. Your participation will last about 60 minutes.
     </p>
 
     <h2>Principal Investigator</h2>
@@ -26,7 +26,10 @@
         <li>Reporting what you have learned</li>
         <li>Taking some cognitive ability tasks</li>
     </ol>
-    <p>The study will last about 45 minutes.</p>
+    <p>
+    During the online information learning task, you will do screen sharing with the researchers, so that the researchers will be able to monitor your progress. At the end of the learning task, you will be asked to recall what you have learned today as much as you can. When you start the recall, the Zoom meeting will be recorded (including the screen capture, your verbal response of free recall). The recall usually takes no more than 5 minutes. The recording will be turned off upon the completion of the recall. We will delete the video recording file (screen capture) right after the end of the study, and delete the audio recording files as soon as we complete the transcription of your recall response. No recording files will be stored for other uses.
+    </p>
+    <p>The study will last about 60 minutes.</p>
 
     <h2>Will my study-related information be kept confidential?</h2>
     <p>
@@ -35,7 +38,7 @@
 
     <h2>Will I be reimbursed for any expenses or paid for my participation in this research?</h2>
     <p>
-      You will be paid $10 after the completion of the study. In addition, participants will receive $5 bonus if the accuracy of comprehension questions is higher than 90%.
+      You will be paid $15 after the completion of the study. In addition, you will receive $5 bonus if the accuracy of comprehension questions is higher than 90%.
     </p>
 
     <h2>Can I withdraw or be removed from the study?</h2>
@@ -50,17 +53,20 @@
 
     <h2>What are the risks and benefits of the study?</h2>
     <p>
-      No risk is expected in this study; benefits related to this research include advancing our understandings in learning science.
+      The study will pose no more than minimal risk to you. There is a risk of loss of confidentiality, given that a portion of the Zoom meeting will be recorded. The study is self-paced, with no potential risk of fatigue more than the everyday activities. There is no potential direct benefit to you. However, for our society, the study will advance understandings in learning sciences and have implications for designing technologies to support learning on your own.
     </p>
+
 
     <h2>Who should I contact if I have questions?</h2>
     <p>
-      Contact the researcher Jessie Chin, Associate Professor in Information Sciences, <a href="mailto:chin5@illinois.edu">chin5@illinois.edu</a> if you have any questions about this study or your part in it, or if you have concerns or complaints about the research.
+      Contact the researchers Jessie Chin, Associate Professor in Information Sciences, <a href="mailto:chin5@illinois.edu">chin5@illinois.edu</a> if you have any questions about this study or your part in it, or if you have concerns or complaints about the research.
     </p>
+
+
 
     <h2>What are my rights as a research subject?</h2>
     <p>
-      If you have any questions about your rights as a research subject, including concerns, complaints, or to offer input, you may call the Office for the Protection of Research Subjects (OPRS) at 217-333-2670 or e-mail OPRS at <a href="mailto:irb@illinois.edu">irb@illinois.edu</a>. If you would like to complete a brief survey to provide OPRS feedback about your experiences as a research participant, please follow the <a href="https://redcap.healthinstitute.illinois.edu/surveys/?s=47X9T4NE4X" target="_blank">link here</a>. You will have the option to provide feedback or concerns anonymously or you may provide your name and contact information for follow-up purposes.
+      If you have any questions about your rights as a research subject, including concerns, complaints, or to offer input, you may call the Office for the Protection of Research Subjects (OPRS) at 217-333-2670 or e-mail OPRS at <a href="mailto:irb@illinois.edu">irb@illinois.edu</a>. If you would like to complete a brief survey to provide OPRS feedback about your experiences as a research participant, please follow the <a href="https://redcap.healthinstitute.illinois.edu/surveys/?s=47X9T4NE4X" target="_blank">link here</a> or through a link on the <a href="https://oprs.research.illinois.edu/" target="_blank">OPRS website</a>. You will have the option to provide feedback or concerns anonymously or you may provide your name and contact information for follow-up purposes.
     </p>
     <p>
       Please print this consent form if you would like to retain a copy for your records.
@@ -70,7 +76,7 @@
 
   <div class="cl0" style="font-size:17pt">
     <span><b>
-      I have read and understand the above consent form. I certify that I am a native speaker of English and aged 18 years old or older. By clicking the “Submit” button to enter the survey, I indicate my willingness to voluntarily take part in this study.
+      I have ready and understand the above consent form. I certify that I am the Native speakers of English, and aged 18 years old or older. By clicking the “Submit” button to enter the survey, I indicate my willingness to voluntarily take part in this study.
     <br><br>
 
     <!-- The form now posts to /demographic instead of demographic.php -->
