--- a/src/templates/let_comp_one_inst.html
+++ b/src/templates/let_comp_one_inst.html
@@ -19,7 +19,7 @@
       In the next task, you will be asked to determine whether two letter strings are exactly the same or different.
       If these two letter strings are exactly the <b>same</b>, please select <b>“S”</b>.
       If they are <b>different</b>, please select <b>“D”</b>.
-      Please do <b>as fast as you can</b>. Once you finish the task, please press “DONE” button.
+      <b>Please do as fast as you can</b>. Once you finish the task, please press the <b>“DONE”</b> button. We will record the time you complete the task.
     </p>
     <p>
       Ready?
