--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -13,7 +13,7 @@
       <h2>Comprehension Questions</h2>
       <div class="cl2">
         <p>
-          The multiple-choice questions here are based on the passage you read in the formal task. Please do your best to answer each question carefully. Try to rely on your memory and understanding of the passage.
+          The multiple-choice questions here are based on the passages you read in the formal task. Please do your best to answer each question carefully. If you are not sure, please select “I don't know the answer”. 
         </p>
         <br>
       </div>
