--- a/src/templates/k2.html
+++ b/src/templates/k2.html
@@ -11,11 +11,7 @@
   <div id="k2" style="text-align:center;">
     <div class="passQ">
       <p>
-        Now, please tell us about what you have learned today about 
-        <b>{{ topicTitle }}</b>.
-        You can either make a list of facts or write a paragraph, but try to be as specific as you can and tell us as much as you can about 
-        {{ trimSubtop }}.
-        <br>
+        Now, we would like to know how much you learned from the formal task. Please tell us about what you have learned today about Health. You can recall anything you remember from any of the topics you read today. You don't need to remember the information word for word. Please say as much as you can!
       </p>
       <br>
       <p style="font-size:18pt;">
