Update consent template title for brevity and improve hyperlink clarity in rights section for research subjects.

--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Online Consent Form</title>
+  <title>Consent</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
@@ -66,7 +66,7 @@
 
     <h2>What are my rights as a research subject?</h2>
     <p>
-      If you have any questions about your rights as a research subject, including concerns, complaints, or to offer input, you may call the Office for the Protection of Research Subjects (OPRS) at 217-333-2670 or e-mail OPRS at <a href="mailto:irb@illinois.edu">irb@illinois.edu</a>. If you would like to complete a brief survey to provide OPRS feedback about your experiences as a research participant, please follow the <a href="https://redcap.healthinstitute.illinois.edu/surveys/?s=47X9T4NE4X" target="_blank">link here</a> or through a link on the https://oprs.research.illinois.edu. You will have the option to provide feedback or concerns anonymously or you may provide your name and contact information for follow-up purposes.
+      If you have any questions about your rights as a research subject, including concerns, complaints, or to offer input, you may call the Office for the Protection of Research Subjects (OPRS) at 217-333-2670 or e-mail OPRS at <a href="mailto:irb@illinois.edu">irb@illinois.edu</a>. If you would like to complete a brief survey to provide OPRS feedback about your experiences as a research participant, please follow the link <a href="https://redcap.healthinstitute.illinois.edu/surveys/?s=47X9T4NE4X" target="_blank">here</a> or through a link on the https://oprs.research.illinois.edu/. You will have the option to provide feedback or concerns anonymously or you may provide your name and contact information for follow-up purposes.
     </p>
     <p>
       Please print this consent form if you would like to retain a copy for your records.
