Add UIUC logo to consent template and update title for clarity; adjust styles for improved layout.

--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -5,10 +5,24 @@
   <title>Consent</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <style>
+    body { margin: 0; }
+    .cl0 { padding-left: 24px; padding-right: 24px; }
+  </style>
 </head>
 <body>
   <div class="cl0">
-		<h2><b>Learning From Multiple Texts</b></h2>
+    <h1 style="text-align: center;">
+      <b>Online Consent Form</b>
+    </h1>
+  </div>
+  <img src="{{ url_for('static', filename='images/UIUC_Logo.png') }}"
+       alt="UIUC Logo"
+       style="height:60px; display:block; margin:10px 0 20px 10px;">
+  <div class="cl0">
+		<h2 style="text-align: center;">
+      <b>Learning From Multiple Texts</b>
+    </h2>
     <p>
       You are being asked to participate in a voluntary research study. The purpose of this study is to understand how people learn information through reading and searching from multiple texts. In this study, you will fill out surveys, learn different topics, answer what you have learned, and complete cognitive ability measures. During the study, you will need to learn several topics under a limit of time. Some topics are more difficult than others. You can decide how you want to allocate your time. The goal is to learn as much as you can. After learning, you will need to report what you have learned and answer comprehension questions. You will receive additional bonus money if the accuracy of your comprehension questions is higher than 90%. Your participation will last about 60 minutes.
     </p>
