Refactor task routes to retrieve conID from session and pass it to templates; update task_c1, task_c2, and task_c3 HTML files to include conID as a hidden input for improved data handling.

--- a/src/templates/task_c1.html
+++ b/src/templates/task_c1.html
@@ -60,6 +60,7 @@
                             </tr>
                           </table>
                         <input type="hidden" name="fid" value="{{ fid }}">
+                        <input type="hidden" name="conID" value="{{ conID }}">
                         <br>
                         <input type="image" name="submit" src="{{ url_for('static', filename='images/continue_button.gif') }}" 
                                alt="continue">
