--- a/src/templates/task_c2.html
+++ b/src/templates/task_c2.html
@@ -71,6 +71,7 @@
                 </table>
 
             <input type="hidden" name="fid" value="{{ fid }}">
+            <input type="hidden" name="conID" value="{{ conID }}">
             <br>
             <input type="image"
                    name="submit"
