--- a/src/templates/task_c3.html
+++ b/src/templates/task_c3.html
@@ -69,6 +69,7 @@
             <!-- hidden fields -->
             <input type="hidden" name="fid" value="{{ fid }}">
             <input type="hidden" name="savepassid" value="{{ passID }}">
+            <input type="hidden" name="conID" value="{{ conID }}">
             <br>
             <input type="image" src="{{ url_for('static', filename='images/continue_button.gif') }}" alt="continue">
             <input type="hidden" name="qid" value="c3">
