add choice E for all comprehension questions. Please run SQL below to update your TB21. """ ALTER TABLE tb21_questions ADD COLUMN choiceE VARCHAR(255) DEFAULT 'I don''t know the answer'; """

--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -67,8 +67,8 @@
                     {% if q.choiceE %}
                     <label class="form-check-label">
                       <input class="form-check-input" type="radio" 
-                             name="q_{{ q.questionID }}" value="E"
-                             {% if existing_answers.get(q.questionID) == 'E' %}checked{% endif %}>
+                             name="q_{{ q.questionID }}" value="e"
+                             {% if existing_answers.get(q.questionID) == 'e' %}checked{% endif %}>
                       {{ q.choiceE }}
                     </label>
                     {% endif %}
